# charger

./: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
backend/: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  build.rs
frontend/.cargo/: config.toml
frontend/src/: main.rs
frontend/ui/: main.slint
