[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
postcard = { version = "1.0.8", default-features = false }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }

[dev-dependencies]
postcard = { version = "*", features = ["experimental-derive"] }

[lints]
workspace = true
