[package]
name = "frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
common.workspace = true
critical-section = "1.1.2"
defmt = { version = "0.3.8", features = ["alloc"] }
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = { version = "0.2.0", features = ["defmt-03"] }
esp-alloc = "0.4.0"
esp-backtrace = { version = "0.13.0", features = ["esp32c3", "exception-handler", "panic-handler", "defmt"] }
esp-hal = { version = "0.19.0", features = ["esp32c3", "defmt"] }
esp-println = { version = "0.10.0", default-features = false, features = ["esp32c3", "defmt-espflash", "uart"] }
mipidsi = "0.8.0"

[lints]
workspace = true
